# ai_study_hub

./: .gitignore  README.md
LaTeX-OCR/: README.md
LaTeX-OCR/app/: Dockerfile  app.py  pyproject.toml
LaTeX-OCR/app/src/: abstractions.py  adapters.py  config.py  llm_factory.py  services.py
rag-workflow-with-eval/: .env.example  README.md  config.py  evaluation.py  evalution.ipynb  pyproject.toml  workflow.ipynb  workflow.py
rag-workflow-with-eval/eval-data/: golden_dataset.jsonl
