[project]
name = "rag-workflow-with-eval"
version = "0.1.0"
dependencies = [
    "nest_asyncio",
    "llama-index",
    "llama-index-llms-ollama",
    "llama-index-embeddings-huggingface",
    "sentence-transformers",
    "torch",
    "accelerate",
    "python-dotenv",
    "pandas",
    "ipykernel",
    "ragas",
    "langfuse",
]
